<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="settingsFragment"
            type="com.cemebsa.biomassa.views.SettingsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_fragment"
            android:id="@+id/toolbar_fragment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <ScrollView
            android:id="@+id/layout_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:context=".views.SettingsFragment">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/tampilan"
                    android:textColor="#7E78CA"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/mode_gelap_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tema_gelap"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/lainnya"
                    android:textColor="#7E78CA"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                <TextView
                    android:id="@+id/about_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/tentang_kjabb"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:onClick="@{(view) -> settingsFragment.launchUri(view)}"/>

                <TextView
                    android:id="@+id/web_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/website_monitoring"
                    android:layout_marginBottom="24dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:onClick="@{(view) -> settingsFragment.launchUri(view)}"/>

                <TextView
                    android:id="@+id/sosmed_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sosial_media"
                    android:layout_marginBottom="24dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:onClick="@{(view) -> settingsFragment.launchUri(view)}"/>

                <TextView
                    android:id="@+id/feedback_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/umpan_balik"
                    android:layout_marginBottom="24dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:onClick="@{(view) -> settingsFragment.launchUri(view)}"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logout_button"
                    android:layout_marginTop="10dp"
                    android:text="@string/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{(view) -> settingsFragment.launchUri(view)}"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>