<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_padding"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/layout_padding"
        android:layout_marginBottom="5dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TableRow>

                <TextView
                    android:id="@+id/jenis_pakan_label"
                    android:layout_marginEnd="@dimen/layout_padding"
                    android:text="@string/jenis_pakan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/jenis_pakan_tv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/ukuran_tebar_label"
                    android:layout_marginEnd="@dimen/layout_padding"
                    android:text="@string/ukuran_tebar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/ukuran_tebar_tv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/banyak_pakan_label"
                    android:layout_marginEnd="@dimen/layout_padding"
                    android:text="@string/banyak_pakan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/banyak_pakan_tv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>


            <TableRow>

                <TextView
                    android:id="@+id/jam_pakan_label"
                    android:layout_marginEnd="@dimen/layout_padding"
                    android:text="@string/jam_pemberian_pakan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/jam_pakan_tv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>