<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/biota_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/layout_padding"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/layout_padding"
        android:layout_marginBottom="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TableRow>

                    <TextView
                        android:id="@+id/jenis_biota_label"
                        android:layout_marginEnd="@dimen/layout_padding"
                        android:text="@string/jenis_biota"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/jenis_biota_tv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/jumlah_biota_label"
                        android:layout_marginEnd="@dimen/layout_padding"
                        android:text="@string/jumlah_tebar"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/jumlah_biota_tv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/bobot_biota_label"
                        android:layout_marginEnd="@dimen/layout_padding"
                        android:text="@string/bobot_biota_gram"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/bobot_biota_tv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tanggal_tebar_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/tanggal_tebar_bibit" />
                    <TextView
                        android:id="@+id/tanggal_tebar_tv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tanggal_panen_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/tanggal_panen_biota" />
                    <TextView
                        android:id="@+id/tanggal_panen_tv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/history_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_history_30" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>